# 37-lesson

1-task/include/: calculatorMainWindow.h
1-task/src/: CMakeLists.txt  calculator.ui  calculatorMainWindow.cpp  main.cpp
2-task/: CMakeLists.txt
2-task/include/: playerMainWindow.h
2-task/player/: CMakeLists.txt  main.qml
2-task/src/: CMakeLists.txt  main.cpp  player.ui  playerMainWindow.cpp
3-task/include/: remoteMainWindow.h
3-task/src/: CMakeLists.txt  main.cpp  remote.ui  remoteMainWindow.cpp
